# embed

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-clang.yml
examples/: CMakeLists.txt
examples/assets/resources/: main.lua
examples/assets/resources/core/: base.lua
examples/assets/resources/lua/core/: b.lua  base.lua
examples/assets/shaders/: sprite.color.pxglsl  sprite.inouts.pxglsl  sprite.pxglsl  sprite.texture.pxglsl  sprite.uniforms.pxglsl  sprite.vxglsl
examples/std/: CMakeLists.txt
examples/std/basic/: CMakeLists.txt
examples/std/basic/source/: a_very_unique_file.meow.txt  compute.c++  hash.c++  license.c++  local_file.c++
examples/std/fetch/source/: fetch_url.c++
examples/std/lua/: CMakeLists.txt
examples/std/lua/ctlua/: CMakeLists.txt
examples/std/lua/ctlua/include/ctlua/: core.hpp  ctlua.hpp  execute.hpp  parse.hpp  path.hpp
examples/std/lua/ctlua/source/: lua.c++
examples/std/lua/live/: CMakeLists.txt
examples/std/lua/live/include/live/: live.hpp
examples/std/lua/live/source/: live.c++
examples/std/lua/source/: lua.c++
examples/std/shader/: CMakeLists.txt
examples/std/shader/include/: shader.hpp
examples/std/shader/source/: invalid.cpp  parse.cpp
examples/std/wip/: main1.art.cpp  main2.art.cpp  main4.cpp
examples/std/wip/shader/: invalid.cpp  parse.cpp  shader.hpp
examples/stdc/basic/: CMakeLists.txt
examples/stdc/basic/source/: FILE.c  FILE.limit.c  embed_hash.c++  has_embed.c  hi.c  if_empty.c  macro_expansion.c  path.chevron.c  path.quote.c
examples/wip/: main6.cpp
include/phd/: embed.hpp  fetch.hpp  fixed_string.hpp  make_static.hpp
infra/azure-build-server/: Brewfile  README.md  main.tf  remote-build-clang.sh  server.sh  sync-to-ctbrowser.sh  user_data.sh  variables.tf
patches/: 0001-clang-Clang-Lex-Sema-Full-std-embed-and-depend-implementat.patch  0001-clang-Lex-Sema-Full-std-embed-and-depend-implementation.patch  0001-clang-feature_cxx_std.embed.patch  0001-gcc-feature_cxx_std.embed.patch  0001-gcc-feature_cxx_std_embed.patch  0002-clang-full-std-embed-and-depend.patch  0003-clang-std-embed-anchor-frame-crash-fix.patch  0004-clang-std-fetch-compile-time-url-fetch.patch  0005-clang-std-fetch-forward-fetch-allow-to-cc1.patch
scripts/: remote-build-clang.sh  remote-build-mingw.sh  sync-to-ctbrowser.sh
scripts/build-clang/: Brewfile  README.md  build.ps1  build.sh
